# mlx-8-week6-fine-tuning-and-rlhf

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.run/: model.start_train.run.xml
model/: Reward_PPO.py  continue_train.py  fine_tune.py  model_common.py  ppo.py  project_config.py  run_on_gpu.sh  start_train.py  sweep.py
model/harness/: __init__.py  base_model.py  base_processor.py  base_trainer.py  utility.py  wandb_helper.py
model/models/: __init__.py  prepared_datasets.py  speaker_embedding_model.py  urban_sound_classifier.py
model/modules/: bert_custom_multi_modal_model.py  custom_lora.py  decoder.py  encoder.py  image_encoders.py  multi_modal_model.py  qwen_multi_modal_model.py  transformer.py
model/trained/tldr_fine_tuned/: README.md  adapter_config.json  adapter_model.safetensors
yali/: PPO_vs_DPO.py  RLHF_with_GPT2.py
