[project]
name = "mlx-8-week6-fine-tuning-and-rlhf"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "datasets>=3.6.0",
    "pip>=25.1.1",
    "wandb>=0.20.1",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.46.0",
    "torchvision>=0.22.1",
    "einops>=0.8.1",
    "peft>=0.15.2",
    "qwen-vl-utils>=0.0.11",
    "torchaudio>=2.7.1",
    "librosa>=0.11.0",
    "evaluate>=0.4.5",
    "rouge-score>=0.1.2",
]

# https://docs.astral.sh/uv/concepts/projects/workspaces/
[tool.uv.workspace]
members = ["packages/*"]

# https://docs.astral.sh/uv/guides/integration/pytorch/#installing-pytorch
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" }
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
